5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1692_1872.log
== TEST (2019-04-30 01:25:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(inptu("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y=!0):
	print("Eixo y")
elif(y==0)and(x=!0):
	print("Eixo x")
elif(y>0):
	print("Q1, Q2")
else:
	print("Q3, Q4")
-- ERROR:
File "XXXX", line 6
    elif(x==0)and(y=!0):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 01:25:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(inptu("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo y")
elif(y==0)and(x=!0):
	print("Eixo x")
elif(y>0):
	print("Q1, Q2")
else:
	print("Q3, Q4")
-- ERROR:
File "XXXX", line 8
    elif(y==0)and(x=!0):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 01:26:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(inptu("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo y")
elif(y==0)and(x!=0):
	print("Eixo x")
elif(y>0):
	print("Q1, Q2")
else:
	print("Q3, Q4")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(inptu("x:  "))
NameError: name 'inptu' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 01:27:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo y")
elif(y==0)and(x!=0):
	print("Eixo x")
elif(y>0):
	print("Q1, Q2")
else:
	print("Q3, Q4")
-- OUTPUT:
Q3, Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 01:28:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo y")
elif(y==0)and(x!=0):
	print("Eixo x")
elif(y>0):
	print("Q1, Q2")
else:
	print("Q3, Q4")
-- EXECUTION TIME:
0.137177
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q3, Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 01:35:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo y")
elif(y==0)and(x!=0):
	print("Eixo x")
elif(y>0)and(x>0):
	print("Q1")
elif(y<0)and(x<0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- EXECUTION TIME:
0.167746
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 01:36:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo y")
elif(y==0)and(x!=0):
	print("Eixo x")
elif(y>0)and(x>0):
	print("Q1")
elif(y>0)and(x<0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- EXECUTION TIME:
0.138935
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 01:37:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo y")
elif(y==0)and(x!=0):
	print("Eixo x")
elif(y>0)and(x>0):
	print("Q1")
elif(y>0)and(x<0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 01:37:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo y")
elif(y==0)and(x!=0):
	print("Eixo x")
elif(y>0)and(x>0):
	print("Q1")
elif(y>0)and(x<0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 01:38:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo y")
elif(y==0)and(x!=0):
	print("Eixo x")
elif(y>0)and(x>0):
	print("Q1")
elif(y>0)and(x<0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 01:38:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo y")
elif(y==0)and(x!=0):
	print("Eixo x")
elif(y>0)and(x>0):
	print("Q1")
elif(y>0)and(x<0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 01:38:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo y")
elif(y==0)and(x!=0):
	print("Eixo x")
elif(y>0)and(x>0):
	print("Q1")
elif(y>0)and(x<0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 01:39:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo y")
elif(y==0)and(x!=0):
	print("Eixo x")
elif(y>0)and(x>0):
	print("Q1")
elif(y>0)and(x<0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 01:39:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo y")
elif(y==0)and(x!=0):
	print("Eixo x")
elif(y>0)and(x>0):
	print("Q1")
elif(y>0)and(x<0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 01:39:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo y")
elif(y==0)and(x!=0):
	print("Eixo x")
elif(y>0)and(x>0):
	print("Q1")
elif(y>0)and(x<0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- EXECUTION TIME:
0.267829
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 01:40:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo x")
elif(y==0)and(x!=0):
	print("Eixo y")
elif(y>0)and(x>0):
	print("Q1")
elif(y>0)and(x<0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- EXECUTION TIME:
0.166725
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 01:42:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo Y")
elif(y==0)and(x!=0):
	print("Eixo x")
elif(y>0)and(x>0):
	print("Q1")
elif(y>0)and(x<0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- EXECUTION TIME:
0.137701
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 01:42:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x:  "))
y=float(input("y:  "))
if(x==0)and(y==0):
	print("Origem")
elif(x==0)and(y!=0):
	print("Eixo Y")
elif(y==0)and(x!=0):
	print("Eixo X")
elif(y>0)and(x>0):
	print("Q1")
elif(y>0)and(x<0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
else:
	print("Q4")
-- EXECUTION TIME:
0.127291
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
